# tokensaver

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  FINAL_REPORT.md  LICENSE  PENDING_TASKS.md  PROJECT_OVERVIEW.md  README.md  SETUP_CHECKLIST.md  build_installer.py  docker-compose.yml  launcher.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh  start_tokensaver.ps1
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: GETTING_STARTED.md  INSTALLATION.md  _config.yml  index.md
installer/: TokenSaver.iss  build_macos_dmg.sh  build_windows_installer.ps1
manager/: __init__.py  alerts.py  anomaly.py  budget_engine.py  config.py  database.py  email_alerts.py  headroom_client.py  ingestion.py  license.py  models.py  reports.py  server.py
manager/templates/: alerts.html  base.html  budgets.html  models.html  overview.html  proxy.html  reports.html  settings.html  teams.html  usage_add.html  usage_import.html  users.html
promotion/: hackernews.md  indiehackers.md  linkedin.md  producthunt.md  reddit.md  twitter.md
proxy/: cache.py  config.py  models.py  server.py
scripts/: capture_screenshots.py  gen_license.py  seed_demo.py  update_github_settings.py
tests/: conftest.py  test_cache_basic.py  test_license.py  test_manager_proxy_usage.py  test_proxy_metrics.py
