[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tokensaver"
version = "1.0.0"
description = "Token compression monitoring dashboard with Headroom proxy"
readme = "README.md"
license = {text = "TokenSaver Community License"}
authors = [{name = "Kunal"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "jinja2>=3.1.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
]
requires-python = ">=3.10"
